--- a/Public/index.html
+++ b/Public/index.html
@@ -25,6 +25,7 @@
     </nav>
 
     <!-- Hero Section -->
+
     <section id="hero">
       <div class="hero-content">
         <img
@@ -38,10 +39,15 @@
         </div>
       </div>
     </section>
+
     <!-- Projects -->
-    <section id="projects">
-      <h4>Projects</h4>
-      <div id="card-container">
+
+    <div class="main-container">
+      <!-- start of main container -->
+
+      <section id="projects">
+        <h4 class="subHead">Projects</h4>
+        <!-- <div id="card-container"> -->
         <div class="row">
           <!-- card 1 -->
           <div class="column">
@@ -92,53 +98,69 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section id="features">
-      <h4>Features</h4>
-      <div id="card-container">
-        <!-- card 5 -->
-        <div class="card">
-          <img src="" alt="" />
-          <h2>Project Tracker</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            repudiandae qui ducimus consequuntur modi et amet illo nemo non
-            dolores molestiae quos porro .
-          </p>
+      </section>
+
+      <!-- Features Section -->
+
+      <section id="features">
+        <h4 class="subHead">Features</h4>
+        <!-- <div id="card-container"> -->
+        <div class="row">
+          <!-- card 5 -->
+          <div class="column">
+            <div class="card">
+              <img src="" alt="" />
+              <h2>Project Tracker</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                repudiandae qui ducimus consequuntur modi et amet illo nemo non
+                dolores molestiae quos porro .
+              </p>
+            </div>
+          </div>
+          <!-- card 6 -->
+          <div class="column">
+            <div class="card">
+              <img src="" alt="" />
+              <h2>Tools/Materials</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                repudiandae qui ducimus consequuntur modi et amet illo nemo non
+                dolores molestiae quos porro .
+              </p>
+            </div>
+          </div>
+          <!-- card 7 -->
+          <div class="column">
+            <div class="card">
+              <img src="" alt="" />
+              <h2>Conversion Tool</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                repudiandae qui ducimus consequuntur modi et amet illo nemo non
+                dolores molestiae quos porro .
+              </p>
+            </div>
+          </div>
+          <!-- card 8 -->
+          <div class="column">
+            <div class="card">
+              <img src="" alt="" />
+              <h2>Safety Check</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                repudiandae qui ducimus consequuntur modi et amet illo nemo non
+                dolores molestiae quos porro .
+              </p>
+            </div>
+          </div>
         </div>
-        <!-- card 6 -->
-        <div class="card">
-          <img src="" alt="" />
-          <h2>Tools/Materials</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            repudiandae qui ducimus consequuntur modi et amet illo nemo non
-            dolores molestiae quos porro .
-          </p>
-        </div>
-        <!-- card 7 -->
-        <div class="card">
-          <img src="" alt="" />
-          <h2>Conversion Tool</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            repudiandae qui ducimus consequuntur modi et amet illo nemo non
-            dolores molestiae quos porro .
-          </p>
-        </div>
-        <!-- card 8 -->
-        <div class="card">
-          <img src="" alt="" />
-          <h2>Safety Check</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            repudiandae qui ducimus consequuntur modi et amet illo nemo non
-            dolores molestiae quos porro .
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
+    <!-- end of main container -->
+
+    <!-- Tips and Tutorials section -->
+
     <section id="tips-tutorials">
       <h4>Tips</h4>
       <p>oawgpwiqghpwighpwigpqwigpqwigpqwigpiwqhg</p>
